# termdex

./: .env  .gitleaks.toml  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  TermdexDockerfile  db.sh  docker-compose.yml
.github/workflows/: actions.yml
migrations/2023-03-14-153311_create_pokemon/: down.sql  up.sql
migrations/2023-04-10-022733_update_sprites/: down.sql  up.sql
migrations/2023-04-10-023937_add_large_small_sprites/: down.sql  up.sql
migrations/2023-04-12-012847_modify_large_small_not_null/: down.sql  up.sql
migrations/2023-04-21-181940_add_pokemon_values/: down.sql  up.sql
migrations/2023-04-22-190643_remove_null_option_ints/: down.sql  up.sql
migrations/2023-04-27-235755_create_pokemon_type/: down.sql  up.sql
migrations/2023-04-28-001016_create_ptype/: down.sql  up.sql
migrations/2023-06-02-022226_create_stats/: down.sql  up.sql
migrations/2023-06-08-024650_make_stats_nonnull/: down.sql  up.sql
migrations/2023-08-16-094430_create_max_stats/: down.sql  up.sql
migrations/2023-08-17-125939_add_entries/: down.sql  up.sql
sprites/: notfound_large  notfound_small
sprites/large/: abomasnow  abomasnow-mega  abra  absol  absol-mega  accelgor  aegislash  aegislash-blade  aerodactyl  aerodactyl-mega  aggron  aggron-mega  aipom  alakazam  alakazam-mega  alcremie  alcremie-caramel-swirl-berry  alcremie-caramel-swirl-clover  alcremie-caramel-swirl-flower  alcremie-caramel-swirl-love  alcremie-gmax  (+1304 more)
src/: api.rs  app.rs  db.rs  downloader.rs  lib.rs  logger.rs  main.rs  models.rs  pokeball.rs  schema.rs  scraper.rs  ui.rs
(+1326 files in other folders)
