[package]
name = "termdex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["default", "blocking", "cookies", "json", "socks"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.0.0", features = ["postgres"] }
serde_json = "1.0"
rand = "0.8.5"
colored = "2.0.0"
crossbeam = "0.8.2"
crossterm = "0.26.1"
tui = { package = "ratatui" }
chrono = "0.4.24"
thiserror = "1.0.40"
ansi-to-tui = "3.0.0"
[dependencies.tui-input]
version = "0.7.0"
features = ['serde']
